[gd_scene load_steps=11 format=2]

[ext_resource path="res://script_pausa.gd" type="Script" id=1]
[ext_resource path="res://recursos/fontes/game_over.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://recursos/fontes/NinjaStrike.otf" type="DynamicFontData" id=3]
[ext_resource path="res://recursos/imagens/recursos/music_26px.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 80
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 45
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=3]
resource_name = "pressione"
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PressioneEnter:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="DynamicFont" id=4]
size = 80
outline_color = Color( 1, 0.00392157, 0.00392157, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 50
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1025.0
margin_bottom = 602.0
color = Color( 0, 0, 0, 0.372549 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Configuracoes" type="Label" parent="."]
margin_left = 385.645
margin_top = 74.1624
margin_right = 635.645
margin_bottom = 120.162
custom_fonts/font = SubResource( 1 )
text = "CONFIGURAÃ‡OES"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressioneEnter" type="Label" parent="."]
margin_left = 435.439
margin_top = 511.721
margin_right = 575.439
margin_bottom = 534.721
custom_fonts/font = SubResource( 2 )
text = "PRESSIONE 'P'"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "pressione"
anims/pressione = SubResource( 3 )

[node name="Label2" type="Label" parent="."]
margin_left = 15.5563
margin_top = 11.3137
margin_right = 400.556
margin_bottom = 90.3137
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0.717647, 0.0156863, 0.0156863, 1 )
text = "NINJA Star"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EfeitosSonoros" type="CheckBox" parent="."]
margin_left = 413.191
margin_top = 217.19
margin_right = 580.191
margin_bottom = 248.19
custom_fonts/font = SubResource( 5 )
text = "EFEITOS SONOROS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Musica" type="CheckBox" parent="."]
margin_left = 414.25
margin_top = 287.115
margin_right = 581.25
margin_bottom = 318.115
custom_fonts/font = SubResource( 5 )
text = "MUSICA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 438.858
margin_top = 413.343
margin_right = 555.858
margin_bottom = 448.343
custom_fonts/font = SubResource( 6 )
text = "Reiniciar"
flat = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 522.04, 308.103 )
scale = Vector2( 1.3414, 1.3414 )
texture = ExtResource( 5 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 604.065, 237.392 )
scale = Vector2( 1.45019, 1.45019 )
texture = ExtResource( 5 )
[connection signal="pressed" from="EfeitosSonoros" to="." method="_on_EfeitosSonoros_pressed"]
[connection signal="pressed" from="Musica" to="." method="_on_Musica_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
